Updates for the C++11 platform, in which almost all external dependencies are resolved via the C++11 standard libraries.
The C++11 time types are so multifaceted that the are converted to timespec
types close to the public API, to avoid complexity in the lower layers.
See public/nsync_time_internal.h

There is a bug fix to internal/sem_wait_no_note.c (which only gets compiled
by those who wish to exclude the nsync_note type from the library).
The one-line change to tools/mkmakefile.sh keeps the copyright notice checker happy.

--- a/builds/x86_64.linux.g++/Makefile
+++ b/builds/x86_64.linux.g++/Makefile
@@ -1,4 +1,4 @@
-PLATFORM_CPPFLAGS=-DNSYNC_ATOMIC_CPP11 -I../../platform/c++11 -D_POSIX_C_SOURCE=200809L -I../../platform/gcc -I../../platform/linux -I../../platform/x86_64 -I../../platform/posix -pthread
+PLATFORM_CPPFLAGS=-DNSYNC_ATOMIC_CPP11 -I../../platform/linux -I../../platform/c++11 -D_POSIX_C_SOURCE=200809L -I../../platform/gcc -I../../platform/x86_64 -I../../platform/posix -pthread
 PLATFORM_CFLAGS=-x c++ -std=c++11 -Werror -Wall -Wextra -pedantic
 PLATFORM_LDFLAGS=-pthread
 MKDEP=${CC} -M -x c++ -std=c++11
