Fix nsync's cmake build for MacOS.
Previously, I had just guessed at the MacOS cmake configuration; I never tried
it because I didn't expect people to user cmake on MacOS.  But apparently some
people use cmake rather than bazel to build tensorflow on MacOS, which means
this needs to work.

There were two problems:
- In the C++ build case, I had neglected to add the "platform/posix" directory
  to the include path.  This is needed to pick up the time representation.
- In both the C and C++ build cases, I had failed to include the
  clock_gettime.c and nsync_semaphore_mutex.c modules.  The first is needed
  because MacOS (or at least some versions) doesn't provide clock_gettime().
  The second is needed because some semaphore implementation is required---I
  had just failed to pick one.

Tested by building both using C++ and C on a Mac.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,9 +52,12 @@ if ("${NSYNC_LANGUAGE}X" STREQUAL "c++11X")
 		)
 	elseif ("${CMAKE_SYSTEM_NAME}X" STREQUAL "DarwinX")
 		include_directories ("${PROJECT_SOURCE_DIR}/platform/macos")
+		include_directories ("${PROJECT_SOURCE_DIR}/platform/posix")
 		add_compile_options ("-std=c++11")
 		set (NSYNC_OS_SRC
 			${NSYNC_OS_CPP_SRC}
+			"platform/posix/src/clock_gettime.c"
+			"platform/posix/src/nsync_semaphore_mutex.c"
 		)
 		set (NSYNC_TEST_OS_SRC
 			"platform/posix/src/start_thread.c"
@@ -129,6 +132,10 @@ if (NOT "${NSYNC_LANGUAGE}X" STREQUAL "c++11X")
 	elseif ("${CMAKE_SYSTEM_NAME}X" STREQUAL "DarwinX")
 		include_directories ("${PROJECT_SOURCE_DIR}/platform/macos")
 		set (NSYNC_POSIX ON)
+		set (NSYNC_OS_EXTRA_SRC
+			"platform/posix/src/clock_gettime.c"
+			"platform/posix/src/nsync_semaphore_mutex.c"
+		)
 		include_directories ("${PROJECT_SOURCE_DIR}/platform/posix")
 	elseif ("${CMAKE_SYSTEM_NAME}X" STREQUAL "LinuxX")
 		include_directories ("${PROJECT_SOURCE_DIR}/platform/linux")
