Portability fixes and workarounds for s390x, MacOS, and C11 atomics.
- Add s390x to bazel's build file.
  Alas, Bazel has a half-baked approach to platform dependent builds, and
  requires you to deduce the operating system and compiler from the CPU type.
  So we need to list the s390x CPU explicitly, just to encode that this
  platform is "linux" and "gcc".
  The header file platform/s390x/cputype.h tells the builds
  that the s390x has implicit memory barriers on its loads and stores.
  For the moment, there's no assembly lanmguage version of the atomics, so this
  platform will work only with compilers/languages or operating systems that
  provide atomics.

- Apple didn't test some of their C++11 includes, such as
	#include <mutex>
  in some of the OS versions, such as Sierra.  To avoid a compile-time error,
  it's necessary to define "_DARWIN_C_SOURCE" on such platforms.  And since we
  don't know which version of the system the user will be using, we define it
  on all version of MacOS, and in all of the Makefile, CMakeLists.txt, and
  bazel BUILD file in the cases when compiling with a C++11 compiler instead of
  a C compiler.

- Apple deprecated their MacOS atomics library, even though they only just made
  the replacement (C11's stdatomic.h) work correctly.  So very recent versions
  give errors about the former being deprecated, and versions that are only a
  little older (and which the developer might still be reasonably using) can't
  use the alternative.  We work around this by ignoring the deprecation for now
  by turning off the deprecation check.
  This affects the MacOS Makefiles.

- Apple have implemented clock_gettime() on later versions.
  This is accommodated with a #if in platform/macos/platform.h.

Other issues encountered during these fixes:
- Use a clang C11 build to test the C11 atomics.  It's closer to the standard
  than the gcc C11.  This adds a few files of the form
  builds/*.clang.atm-c11/Makefile

- To allow clang to be used more (eve

--- a/builds/x86_64.macos.c++11/Makefile
+++ b/builds/x86_64.macos.c++11/Makefile
@@ -1,5 +1,6 @@
 CC=clang++
-PLATFORM_CPPFLAGS=-DNSYNC_USE_CPP11_TIMEPOINT -DNSYNC_ATOMIC_CPP11 -I../../platform/c++11 -I../../platform/gcc -I../../platform/macos -I../../platform/posix -pthread
+# Some versions of MacOS (such as Sierra) require _DARWIN_C_SOURCE to include <mutex>, <condition_variable>, and <thread> (!)
+PLATFORM_CPPFLAGS=-DNSYNC_USE_CPP11_TIMEPOINT -DNSYNC_ATOMIC_CPP11 -D_DARWIN_C_SOURCE -I../../platform/c++11 -I../../platform/gcc -I../../platform/macos -I../../platform/posix -pthread
 PLATFORM_CFLAGS=-x c++ -std=c++11 -Werror -Wall -Wextra -pedantic
 PLATFORM_LDFLAGS=-pthread
 MKDEP=${CC} -x c++ -M -std=c++11
