--- a/builds/x86_64.linux.gcc.atm-c11/Makefile
+++ b/builds/x86_64.linux.gcc.atm-c11/Makefile
@@ -1,5 +1,5 @@
 PLATFORM_CPPFLAGS=-DNSYNC_ATOMIC_C11 -I../../platform/c11 -D_POSIX_C_SOURCE=200809L -I../../platform/gcc -I../../platform/linux -I../../platform/x86_64 -I../../platform/posix -pthread
-PLATFORM_CFLAGS=-Werror -Wall -Wextra -ansi -pedantic
+PLATFORM_CFLAGS=-Werror -Wall -Wextra -ansi -pedantic -Wno-unneeded-internal-declaration
 PLATFORM_LDFLAGS=-pthread
 MKDEP=${CC} -M
 PLATFORM_C=../../platform/linux/src/nsync_semaphore_futex.c ../../platform/posix/src/per_thread_waiter.c ../../platform/posix/src/yield.c ../../platform/posix/src/time_rep.c ../../platform/posix/src/nsync_panic.c
