Add a generic_unix Makefile to nsync, plus cleanups.
This change adds a "generic_unix" Makefile to nsync.
The idea is that if you cd to nsync/builds/generic_unix
on most Unix-like platforms, it's sufficient to type:
	make

If you use a special compiler, or a cross-compiler
	make CC=<compiler>

That works because all the information about the
platform is derived from the compiler's beahviour.

This works as follows:
	The Makefile invokes another Makefile via a script detect.sh which
	detects the target platform type and passes appropriarte flags to the
	second "make" invocation.

	The platform detection is done by running a file "detect.c" through the
	compiler's C preprocessor, to get the value of four parameters:
		the compiler type (e.g., gcc)
		the OS type (e.g., netbsd)
		the CPU architecture type (e.g., mips)
		the target language (e.g., c, c11, c++, c++11)
	The script sets the Makefile parameters based on those
	detected values.

builds/generic_unix/Makefile
builds/generic_unix/Makefile.helper
	Initial and secondary Makefiles for generic_unix build

tools/detect.sh
	Platform detection script.

tools/detect.c
	C preprocessed file for platform detection.

tools/mkdep.sh
	The compiler may be a cross-compiler, so it may not be able to run
	mkdep.c.  This does the same thing as a shell script.
	(mkdep.c is still needed for Windows, however.)

tools/run_tests.sh
	A shell-script version of run_tests.  Again, a shell script to allow it
	tio be used when a cross-compiler is in use.  It has an extra flag to
	define an intermediate programme to run the cross-compiled tests
	(perhaps removely or via an interpreter).
	The Makefiles do not yet use this script.

Changes to allow additional compilers:

platform/pcc/compiler.h
platform/tendracc/compiler.h
tools/mkmakefile.sh
	Add support for pcc and tendracc.

builds/x86_32.linux.clang/Makefile
builds/x86_32.linux.gcc/Makefile
builds/x86_32.linux.tcc/Makefile
	Add -lrt on linux patforms which cometimes find clock_gettime() in


--- a/builds/x86_32.linux.clang/Makefile
+++ b/builds/x86_32.linux.clang/Makefile
@@ -1,6 +1,7 @@
 CC=clang
 PLATFORM_CPPFLAGS=-D_POSIX_C_SOURCE=200809L -I../../platform/clang -I../../platform/linux -I../../platform/x86_32 -I../../platform/posix -pthread
 PLATFORM_CFLAGS=-Werror -Wall -Wextra -ansi -pedantic -Wno-unneeded-internal-declaration
+PLATFORM_LIBS=-lrt
 PLATFORM_LDFLAGS=-pthread
 MKDEP=${CC} -M
 PLATFORM_C=../../platform/linux/src/nsync_semaphore_futex.c ../../platform/posix/src/per_thread_waiter.c ../../platform/posix/src/yield.c ../../platform/posix/src/time_rep.c ../../platform/posix/src/nsync_panic.c
