--- a/builds/aarch64.linux.c++11/Makefile
+++ b/builds/aarch64.linux.c++11/Makefile
@@ -1,10 +1,12 @@
+# On Linux, wakeups from C++11 condition variables are surprisingly slow, so we
+# use futex directly.
 CC=g++
-PLATFORM_CPPFLAGS=-DNSYNC_USE_CPP11_TIMEPOINT -DNSYNC_ATOMIC_CPP11 -I../../platform/c++11 -I../../platform/gcc -I../../platform/posix -pthread
+PLATFORM_CPPFLAGS=-DNSYNC_USE_CPP11_TIMEPOINT -DNSYNC_ATOMIC_CPP11 -I../../platform/c++11.futex -I../../platform/c++11 -I../../platform/gcc -I../../platform/posix -pthread
 PLATFORM_CFLAGS=-std=c++11 -Werror -Wall -Wextra -pedantic
 PLATFORM_LDFLAGS=-pthread
 MKDEP=${CC} -M -std=c++11
-PLATFORM_C=../../platform/c++11/src/nsync_semaphore_mutex.cc ../../platform/c++11/src/per_thread_waiter.cc ../../platform/c++11/src/yield.cc ../../platform/c++11/src/time_rep_timespec.cc ../../platform/c++11/src/nsync_panic.cc
-PLATFORM_OBJS=nsync_semaphore_mutex.o per_thread_waiter.o yield.o time_rep_timespec.o nsync_panic.o
+PLATFORM_C=../../platform/linux/src/nsync_semaphore_futex.c ../../platform/c++11/src/per_thread_waiter.cc ../../platform/c++11/src/yield.cc ../../platform/c++11/src/time_rep_timespec.cc ../../platform/c++11/src/nsync_panic.cc
+PLATFORM_OBJS=nsync_semaphore_futex.o per_thread_waiter.o yield.o time_rep_timespec.o nsync_panic.o
 TEST_PLATFORM_C=../../platform/c++11/src/start_thread.cc
 TEST_PLATFORM_OBJS=start_thread.o
 
