cmake: introduce copy_to_cpp() function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,15 @@ function (set_cpp_target tgtname files)
 	endforeach (s)
 endfunction ()
 
+function (copy_to_cpp file)
+	add_custom_command(
+		OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/cpp/${file}"
+		COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_CURRENT_SOURCE_DIR}/${file}"
+			"${CMAKE_CURRENT_BINARY_DIR}/cpp/${file}"
+		DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/${file}"
+	)
+endfunction ()
+
 # -----------------------------------------------------------------
 # Platform dependencies
 
@@ -271,11 +280,7 @@ foreach (s IN ITEMS ${NSYNC_COMMON_SRC} ${NSYNC_OS_CPP_SRC})
 	# the filetype based on the extension so we need to override LANGUAGE
 	# manually. A custom command first copies the source files (only if
 	# changed) so the LANGUAGE property does not conflict.
-	add_custom_command (
-		OUTPUT cpp/${s}
-		COMMAND ${CMAKE_COMMAND} -E copy_if_different ${PROJECT_SOURCE_DIR}/${s} cpp/${s}
-		DEPENDS ${PROJECT_SOURCE_DIR}/${s}
-	)
+	copy_to_cpp("${s}")
 
 	set (NSYNC_CPP_SRC_COPY ${NSYNC_CPP_SRC_COPY}
 		cpp/${s}
@@ -311,11 +316,7 @@ if (NSYNC_ENABLE_TESTS)
 	)
 
 	foreach (t IN ITEMS ${NSYNC_TEST_SRC})
-		add_custom_command (
-			OUTPUT cpp/${t}
-			COMMAND ${CMAKE_COMMAND} -E copy_if_different ${PROJECT_SOURCE_DIR}/${t} cpp/${t}
-			DEPENDS ${PROJECT_SOURCE_DIR}/${t}
-		)
+		copy_to_cpp("${t}")
 
 		set (NSYNC_TEST_CPP_SRC "${NSYNC_TEST_CPP_SRC}"
 			"cpp/${t}"
@@ -365,11 +366,7 @@ if (NSYNC_ENABLE_TESTS)
 		add_test (NAME ${t} COMMAND ${t})
 		add_dependencies (test_c ${t})
 
-		add_custom_command (
-			OUTPUT cpp/testing/${t}.c
-			COMMAND ${CMAKE_COMMAND} -E copy_if_different ${PROJECT_SOURCE_DIR}/testing/${t}.c cpp/testing/${t}.c
-			DEPENDS ${PROJECT_SOURCE_DIR}/testing/${t}.c
-		)
+		copy_to_cpp("testing/${t}.c")
 
 		set (NSYNC_TEST_CPP_SRC ${NSYNC_TEST_CPP_SRC}
 			cpp/testing/${t}.c
