--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required (VERSION 2.8.12)
+cmake_minimum_required (VERSION 2.8.12...4.0)
 
 # nsync provides portable synchronization primitives, such as mutexes and
 # condition variables.
